# xHM

./: .gitignore  README.md
documents/: CanopyParameters.md  Evapotranspiration.md  Routing.md  SOIL_LIB.xlsx  Soil_process.md  radiation_calc.md  snow_process.md  snow_radiation_calc.md  technical_documents.md
example_data/: GEO_data.nc  GEO_para.txt  Global_Para.txt  Global_Para_SCEUA.txt  Global_Para_tem.txt  Maqu_meteo.csv  OUTPUT_NAMELIST.txt  Para_ET.txt  Para_RouteUH.txt  Para_Weather_Chitan1km.txt  Para_Weather_Chitan250m.txt  Potsdam_Radiation_Calc_weather.txt  Qobs_daily_Jianning.txt  Radiation_Calc_Global_paras.txt  RouteUH_para.txt  SOIL_HWSD_ID.txt  SOIL_LIB.txt  SOIL_LIB.xlsx  Snow_GlobalParas.txt  VegeLib.txt  VegeLib.xlsx  Weather_para_JN1km.txt  Zugspitze_weather.csv  dem_fill.txt  fac.txt  fdr.txt  info_rr_daily_18sites_2001-2016.csv  outlets.txt  str.txt  strlink.txt
example_data/CT_GEO_1km/: GEO1km_data.nc  GEO_para.txt  dem_fill.txt  fac.txt  fdr.txt  outlet.txt  soil.txt  str.txt  vegetype.txt
example_data/CT_GEO_250m/: GEO_data.nc  GEO_para.txt  dem_fill.txt  outlets.txt  str.txt
example_data/JN_GEO_1km/: GEO_data.nc  GEO_para.txt  dem_fill.txt  fac.txt  fdr.txt  outlet.txt  soil.txt  str.txt  vegetype.txt
example_data/JN_GEO_1km/Weather/: Para_Weather_JN1km_PRE.txt  Para_Weather_JN1km_PRS.txt  Para_Weather_JN1km_RHU.txt  Para_Weather_JN1km_SSD.txt  Para_Weather_JN1km_TEM_AVG.txt  Para_Weather_JN1km_TEM_MAX.txt  Para_Weather_JN1km_TEM_MIN.txt  (+1 more)
example_data/Qobs/: Qobs_daily_Chitan_1982-2016.txt  Qobs_daily_Jianning.txt
example_data/Weather/: Para_Weather_Chitan1km_PRE.txt  Para_Weather_Chitan1km_PRS.txt  Para_Weather_Chitan1km_RHU.txt  Para_Weather_Chitan1km_SSD.txt  Para_Weather_Chitan1km_TEM_AVG.txt  Para_Weather_Chitan1km_TEM_MAX.txt  Para_Weather_Chitan1km_TEM_MIN.txt  Para_Weather_Chitan1km_WIN.txt  WEATHER_DATA_READM.md  data_PRE.csv  data_PRS.csv  data_RHU.csv  data_SSD.csv  data_TEM_AVG.csv  data_TEM_MAX.csv  data_TEM_MIN.csv  data_WIN.csv  info_rr_daily_18sites_2001-2016_Weather.csv  rr_daily_18sites_2001-2016.csv  weather_daily_2001-2016.csv
example_data/weather/: Weather_para.txt  info_rr_daily_18sites_2001-2016.csv
scr/: CMakeLists.txt  Calendar.c  Calendar.h  Check_DATA.c  Check_DATA.h  Constants.h  Evaporation_soil.c  Evaporation_soil.h  Evapotranspiration.c  Evapotranspiration.h  Evapotranspiration_Energy.c  Evapotranspiration_Energy.h  Evapotranspiration_ST.h  Evapotranspiration_main.c  Func_Tem.c  Func_Tem.h  GEO2ASCII.c  GEO2ASCII.h  GEO2NC.c  GEO2NC.h  GEO2NC_main.c  GEO_ST.h  GEO_main.c  GEO_para.c  GEO_para.h  HM_GlobalPara.c  HM_GlobalPara.h  HM_ST.h  Initial_VAR.c  Initial_VAR.h  Lookup_SoilLib.c  Lookup_SoilLib.h  Lookup_VegLib.c  Lookup_VegLib.h  Makefile  Model_Output2NC.c  Model_Output2NC.h  NC_copy_global_att.c  NC_copy_global_att.h  NetCDF_IO_geo.c  (+53 more)
